deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability-app
  labels:
    app.kubernetes.io/name: observability
    app.kubernetes.io/part-of: oci-observability-overview
